--- a/.env.example
+++ b/.env.example
@@ -77,4 +77,4 @@ VITE_REVERB_HOST="${REVERB_HOST}"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
-GOOGLE_MAPS_API_KEY=AIzaSyDRHPp4qmH-dE7Hgvk0DiBGmw3qrwbcLK0
+GOOGLE_MAPS_API_KEY=
